cmake_minimum_required(VERSION 3.26)
project(LobbyServer)

set(CMAKE_CXX_STANDARD 20)
add_executable(Chapter4-1 Chapter4/4-1/4-1.cpp)

add_executable(Chapter5-1 Chapter5/5-1/5-1.cpp)
add_executable(Chapter5-2 Chapter5/5-2/5-2.cpp)
add_executable(Chapter5-3 Chapter5/5-3/5-3.cpp)

add_executable(Chapter5-4 Chapter5/5-4/5-4.cpp)
add_executable(Chapter5-5 Chapter5/5-5/5-5.cpp)
add_executable(Chapter5-6 Chapter5/5-6/5-6.cpp)
add_executable(Chapter6-1 Chapter6/6-1/6-1.cpp)
